# sistemaieee118

./: CMakeLists.txt  README.md  index.html  init.c  params.json
cpuSistemaieee118/: init.c
cpuSistemaieee118/utilities/: CMakeLists.txt  utilities.c
cpuSistemaieee118Articulo/: CMakeLists.txt  init.c
cpuSistemaieee118Articulo/utilities/: CMakeLists.txt  utilities.c  utilities.h
gpuSistemaieee118/: CMakeLists.txt  init.cu
gpuSistemaieee118/utilities/: CMakeLists.txt  cusolverUtilities.cu  cusolverUtilities.cuh  utilities.cu  utilities.h
gpuSistemaieee118Articulo/: CMakeLists.txt  init.cu
gpuSistemaieee118Articulo/utilities/: CMakeLists.txt  cusolverUtilities.cu  utilities.cu
inputs/: NW  cargas  cargasBig  gen  genBig  imax  lineas  lineasBig
utilities/: utilities.c  utilities.h
